# synaptix

./: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml
sample-configs/: synaptix.conf
sample-configs/macros/: BackspaceMacro.do  ExampleMacro.do  ExampleMouse.do
src/: build.h  build.h.in  device.cpp  device.h  device_manager.cpp  device_manager.h  disk.cpp  disk.h  input.cpp  input.h  keyboard.cpp  keyboard.h  loader.cpp  loader.h  macro.cpp  macro.h  main.cpp
src/dev/: device.cpp  device.h  keyboard_map.cpp  keyboard_map.h
src/io/: disk.cpp  input.cpp  input.h  loader.cpp  loader.h
src/xorg/: input_xorg.cpp  input_xorg.h
